Fri Apr 02 13:57:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Updated latest release date

        * bin/generate_rel_manpages:
          Don't automatically copy the files to ISIS, added the copy
          step to the release instructions

        * docs/bczar/bczar.html:
          Small improvements and manually copy the html files using
          scp. Makes it easier to run this from another host

        * docs/Download.html:
          Updated links to point to x.7.8

        * html/index.html:
          Added link for x.7.8

        * NEWS:
          Added 5.7.8 section

Fri Apr 02 10:50:48 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ACE version 5.7.8 released.

Tue Mar 30 09:38:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/*:
          Pulled in latest files from pkg-ace

Tue Mar 30 09:34:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Thread_Timer_Queue_Adapter_Test.cpp:
          Fixed compilation problems with single threaded builds

Tue Mar 30 07:50:02 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/MT_NonBlocking_Connect_Test.cpp:
          Fixed compilation problem for single threaded builds.

Mon Mar 29 12:25:38 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/NDDS_Timer_Test.cpp:
          Resolved test issues.

Mon Mar 29 11:05:23 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/NDDS_Timer_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added timer test which uses the ndds timers.

Mon Mar 29 06:59:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ace_qt4reactor.mpb:
          New base project, thanks to Marek Brudka <mbrudka at aster dot pl>
          for providing this

Mon Mar 29 06:54:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/*: