@@ -2320,6 +2320,7 @@ Trent Nadeau <Trent dot Nadeau at ngc dot com>
 Nick Meyer <nick dot meyer at sensis dot com>
 Olivier Langlois <olivier at olivierlanglois dot net>
 Patrick Soboljew <patrick dot soboljew at gmail dot com>
+Ed Blackmond <ed dot blackmond at themis dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
